Fix movie frames gallery z-index problem

--- a/src/components/app-components/movies/movie-page/MoviePage.scss
+++ b/src/components/app-components/movies/movie-page/MoviePage.scss
@@ -10,7 +10,6 @@
 }
 
 .movie-frames-gallery {
-  z-index: 1000;
   min-width: 900px;
 }
 
